EDU-1246 Improve focus header title visibility

--- a/src/components/focus-header.less
+++ b/src/components/focus-header.less
@@ -8,7 +8,8 @@
 
 .FocusHeader-title {
   .m-overflow-ellipsis;
-  font-weight: bold;
+  font-size: @edu-font-size-xl;
+  font-weight: 500;
 }
 
 .FocusHeader-content {
