EDU-1250 Support attaching refs to page header and main DOM elements

--- a/src/components/default-page-header.less
+++ b/src/components/default-page-header.less
@@ -1,7 +1,6 @@
 .DefaultPageHeader {}
 
 .DefaultPageHeader-container {
-  .m-page-content;
   background-color: @edu-white;
   z-index: @edu-z-index-sticky-content-layer;
 
@@ -14,6 +13,10 @@
     left: 0;
     right: 0;
   }
+}
+
+.DefaultPageHeader-contentWrapper {
+  .m-page-content;
 }
 
 .DefaultPageHeader-content {
