--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -82,6 +82,7 @@
 @import '../components/dashboard/favorites-tab.less';
 @import '../components/dashboard/activities-tab.less';
 @import '../components/admin/admin-settings-tab.less';
+@import '../components/document-version-history.less';
 @import '../components/admin/storage-plan-select.less';
 @import '../components/never-scrolling-text-area.less';
 @import '../components/media-player/html5-player.less';
