--- a/src/components/pages/document.less
+++ b/src/components/pages/document.less
@@ -1,4 +1,4 @@
-@document-page-history-panel-width: 250px;
+@document-page-history-panel-width: 320px;
 
 .DocumentPage {
   display: grid;
@@ -10,6 +10,7 @@
 
 .DocumentPage-historyPanel {
   .m-box-shadow;
+  overflow: auto;
   position: fixed;
   right: 0;
   background-color: @edu-white;
