--- a/src/components/document-version-history.less
+++ b/src/components/document-version-history.less
@@ -2,10 +2,10 @@
   display: grid;
   gap: 30px;
   grid-auto-flow: row;
-  padding: 30px 15px 0 30px;
+  padding: 30px 15px 30px;
 }
 
-.DocumentVersionHistory-timelineItem {
+.DocumentVersionHistory-item {
   .ant-collapse-header {
     padding: 0 !important;
   }
@@ -16,45 +16,53 @@
   }
 }
 
-.DocumentVersionHistory-timelineItemDot {
-  &.DocumentVersionHistory-timelineItemDot--circle {
+.DocumentVersionHistory-itemDot {
+  &.DocumentVersionHistory-itemDot--circle {
     border-radius: 50%;
     height: 10px;
     width: 10px;
     border: 2px solid @edu-border-color-light;
+
+    &.is-selected-revision {
+      border-color: @edu-primary-color-light;
+    }
   }
 
-  &.DocumentVersionHistory-timelineItemDot--icon {
+  &.DocumentVersionHistory-itemDot--icon {
     color: @edu-text-color;
   }
 }
 
-.DocumentVersionHistory-timelineItemHeader {
+.DocumentVersionHistory-itemHeader {
   display: grid;
   gap: 2px;
   grid-auto-flow: row;
 }
 
-.DocumentVersionHistory-timelineItemHeaderText {
-  &.is-panel-open {
+.DocumentVersionHistory-itemHeaderText {
+  &.is-open-panel {
     font-weight: bold;
   }
 }
 
-.DocumentVersionHistory-timelineItemHeaderSubtext {
+.DocumentVersionHistory-itemHeaderSubtext {
   color: @edu-text-color-secondary;
 }
 
-.DocumentVersionHistory-timelineContentRow {
+.DocumentVersionHistory-itemContentRow {
   display: flex;
   flex-wrap: wrap;
 }
 
-.DocumentVersionHistory-timelineContentRowValue {
+.DocumentVersionHistory-itemContentRowValue {
   margin-left: 5px;
   color: @edu-text-color-secondary;
 }
 
-.DocumentVersionHistory-userProfileLink {
-  color: @edu-text-color-secondary !important;
+.DocumentVersionHistory-itemActions {
+  display: grid;
+  gap: 10px;
+  margin-top: 20px;
+  grid-auto-flow: column;
+  justify-content: start;
 }
