EDU-1250 Display current version in focus header

--- a/src/components/document-version-history.less
+++ b/src/components/document-version-history.less
@@ -2,7 +2,7 @@
   display: grid;
   gap: 30px;
   grid-auto-flow: row;
-  padding: 30px 15px 30px;
+  padding: 30px 15px 0 30px;
 }
 
 .DocumentVersionHistory-item {
