--- a/src/components/pages/document.less
+++ b/src/components/pages/document.less
@@ -81,3 +81,10 @@
     display: none;
   }
 }
+
+.DocumentPage-focusHeaderVersionHistoryInfo {
+  display: grid;
+  gap: 10px;
+  grid-auto-flow: column;
+  margin-left: auto;
+}
