EDU-1243 Refer to comments more specifically as documentComments

--- a/src/components/document-comments-panel.less
+++ b/src/components/document-comments-panel.less
@@ -1,6 +1,6 @@
-.CommentsPanel {}
+.DocumentCommentsPanel {}
 
-.CommentsPanel-topicPanel {
+.DocumentCommentsPanel-topicPanel {
   position: relative;
 
   .ant-collapse-header {
@@ -12,27 +12,27 @@
   }
 }
 
-.CommentsPanel-topicHeader {
+.DocumentCommentsPanel-topicHeader {
   display: flex;
   align-items: center;
 }
 
-.CommentsPanel-topicInputPrefix {
+.DocumentCommentsPanel-topicInputPrefix {
   margin-right: 10px;
   font-weight: bold;
   white-space: nowrap;
 }
 
-.CommentsPanel-topicInput {
+.DocumentCommentsPanel-topicInput {
   width: 100%;
   padding: 5px 0;
 
-  &.CommentsPanel-topicInput--edit {
+  &.DocumentCommentsPanel-topicInput--edit {
     margin-right: 10px;
   }
 }
 
-.CommentsPanel-comment {
+.DocumentCommentsPanel-comment {
   position: relative;
   margin: @edu-content-padding;
   margin-bottom: 3 * @edu-content-padding;
@@ -42,44 +42,44 @@
   }
 }
 
-.CommentsPanel-metadata {
+.DocumentCommentsPanel-metadata {
   display: flex;
   justify-content: space-between;
   font-size: @edu-font-size-sm;
 }
 
-.CommentsPanel-date {
+.DocumentCommentsPanel-date {
   font-style: italic;
 }
 
-.CommentsPanel-text {
+.DocumentCommentsPanel-text {
   margin: 5px 0;
   padding: @edu-content-padding;
   border-radius: @edu-border-radius-base;
   background-color: @edu-background-color-light;
 
-  &.CommentsPanel-text--deleted {
+  &.DocumentCommentsPanel-text--deleted {
     font-style: italic;
   }
 }
 
-.CommentsPanel-commentDeleteButton {
+.DocumentCommentsPanel-commentDeleteButton {
   position: absolute;
   bottom: 0;
   right: -25px;
 }
 
-.CommentsPanel-postCommentButton {
+.DocumentCommentsPanel-postCommentButton {
   display: flex !important;
   margin-top: 20px;
   margin-left: auto;
 }
 
-.CommentsPanel-newTopicButton {
+.DocumentCommentsPanel-newTopicButton {
   margin-top: 20px;
 }
 
-.CommentsPanel-editTopicButtonsGroup {
+.DocumentCommentsPanel-editTopicButtonsGroup {
   display: grid;
   gap: 5px;
   align-items: center;
