--- a/test-app/src/custom-components/homepage-template.less
+++ b/test-app/src/custom-components/homepage-template.less
@@ -13,7 +13,7 @@
 
 .HomepageTemplate-aboveFold {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr;
 }
@@ -84,7 +84,6 @@
   display: grid;
   grid-auto-flow: row;
   place-items: center;
-  z-index: @edu-z-index-background-layer;
 }
 
 .HomepageTemplate-underFoldStripe {
