--- a/test-app/src/custom-components/homepage-template.less
+++ b/test-app/src/custom-components/homepage-template.less
@@ -13,7 +13,7 @@
 
 .HomepageTemplate-aboveFold {
   width: 100%;
-  min-height: 100vh;
+  min-height: calc(100vh - 5px);
   display: grid;
   grid-template-rows: auto 1fr;
 }
@@ -34,17 +34,20 @@
     background-size: 100% auto, auto 100%;
     background-color: @edu-primary-color-light;
   }
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .HomepageTemplate-aboveFoldContent {
   .m-page-content;
   width: 100%;
-  height: 100%;
   display: grid;
   gap: @edu-content-padding;
   align-content: start;
   grid-auto-flow: row;
-  margin: 15% auto 0 auto;
   max-width: @edu-content-width-narrow;
 }
 
