EDU-1248 Remove navigation register link

--- a/src/components/login-form.less
+++ b/src/components/login-form.less
@@ -5,9 +5,9 @@
   color: @edu-error-color;
 }
 
-.LoginForm-forgotPasswordLink {
-  margin-top: @edu-control-height-sm;
+.LoginForm-alternativeActionLink {
   text-align: right;
+  margin-top: @edu-content-padding;
 }
 
 .LoginForm-loginButton {
