--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -434,7 +434,7 @@
 }
 
 .m-user-form-submit-button {
-  margin-top: @edu-control-height-lg;
+  margin-top: @edu-control-height-base;
 }
 
 .m-plugin-media-preview {
