EDU-1262 Rework user card component

--- a/src/components/favorite-star.less
+++ b/src/components/favorite-star.less
@@ -1,7 +1,8 @@
 .FavoriteStar {
+  cursor: pointer;
   display: flex;
   font-size: 20px;
-  cursor: pointer;
+  justify-content: center;
 
   &.is-filled {
     color: @edu-secondary-color-dark;
