--- a/src/components/user-card.less
+++ b/src/components/user-card.less
@@ -1,23 +1,43 @@
 .UserCard {
-  .m-card;
-  display: grid;
-  text-align: center;
-  align-items: center;
-  gap: 10px;
-  padding: @edu-content-padding;
-  grid-template-rows: 1fr auto 1fr;
-  border-radius: @edu-border-radius-base;
-  border: 1px solid @edu-border-color-light;
-  border-radius: @edu-border-radius-base;
+  .m-row-card(4);
 }
 
-.UserCard-displayName {
-  .m-overflow-ellipsis;
+.UserCard-content {
+  height: 220px;
+  display: grid;
+  gap: 10px;
+  grid-auto-flow: row;
+  align-items: center;
+  overflow: hidden;
+
+  &.UserCard-content-clickable {
+    cursor: pointer;
+  }
 }
+
+.UserCard-avatar {
+  margin: 0 auto !important;
+}
+
+.UserCard-title {
+  .m-overflow-ellipsis;
+  text-align: center;
+  font-weight: bold;
+}
+
+.UserCard-details {
+  text-align: center;
+  font-size: @edu-font-size-sm;
+  .m-line-clamp(2);
+
+  &.UserCard-details--includesEmail {
+    .m-line-clamp(1);
+  }
+}
+
 
 .UserCard-email {
   .m-overflow-ellipsis;
-  font-size: @edu-font-size-sm;
   color: @edu-text-color-secondary;
 }
 
@@ -26,16 +46,6 @@
   margin-left: 5px;
 }
 
-.UserCard-content {
-  display: grid;
-  gap: 5px;
-  grid-auto-flow: row;
-}
-
-.UserCard-avatar {
-  margin: 0 auto !important;
-}
-
-.UserCard-button {
-  width: 100%;
+.UserCard-favoriteAction {
+  // margin: 0 auto;
 }
