EDU-1262 Improve section headlines visibility

--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -225,7 +225,8 @@
 .m-section-headline {
   margin: 30px 0 15px 0;
   color: @edu-text-color;
-  font-size: @edu-font-size-lg;
+  font-weight: bold;
+  font-size: @edu-heading-4-size;
 
   &:first-of-type {
     margin-top: 0;
@@ -233,7 +234,7 @@
 }
 
 .m-content-headline {
-  font-size: @edu-heading-5-size;
+  font-size: @edu-heading-4-size;
   font-weight: bold;
   margin-bottom: 20px;
 }
