EDU-1262 Introduce shortDescription to rooms

--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -28,7 +28,7 @@
   padding-left: @edu-control-spacing-wide;
 }
 
-.RoomPage-description {
+.RoomPage-overview {
   margin-bottom: 50px;
 }
 
@@ -184,7 +184,7 @@
   .m-section-headline;
 }
 
-.RoomPage-metadataSection {
+.RoomPage-settingsSection {
   .m-section-content;
 }
 
