EDU-1248 Simplity and clarify LESS calc cases

--- a/src/components/pages/doc.less
+++ b/src/components/pages/doc.less
@@ -3,7 +3,7 @@
 
 // `has:` works in all modern browsers except Firefox
 *:has(> .DocPage-controlPanels) > .DocPage {
-  min-height: %(~"calc(100vh - %s)", @control-panel-height);
+  min-height: calc(100vh - @control-panel-height);
 }
 
 .DocPage {
