--- a/src/plugins/table/table.less
+++ b/src/plugins/table/table.less
@@ -60,7 +60,7 @@
 .TableDesigner-grid {
   display: grid;
   margin: -@table-plugin-designer-header-size 0 0 -@table-plugin-designer-header-size;
-  width: %(~"calc(100% + %s)", @table-plugin-designer-header-size);
+  width: calc(100% + @table-plugin-designer-header-size);
 }
 
 .TableDesigner-gridCell {
