EDU-1262 Improve user-card

--- a/src/components/dashboard/favorites-tab.less
+++ b/src/components/dashboard/favorites-tab.less
@@ -16,6 +16,14 @@
 
 .FavoriteTab-headline {
   .m-section-headline;
+  display: grid;
+  gap: 5px;
+  grid-auto-flow: column;
+  justify-content: start;
+}
+
+.FavoriteTab-headlineCounter {
+  color: @edu-text-color-secondary;
 }
 
 .FavoritesTab-cards {
