EDU-1262 Rework room-card component

--- a/src/components/room-card.less
+++ b/src/components/room-card.less
@@ -1,38 +1,42 @@
 .RoomCard {
-  .m-card;
-  position: relative;
-  display: grid;
-  gap: 10px;
-  grid-template-rows: 55px auto auto;
-  padding: @edu-content-padding;
-  border-radius: @edu-border-radius-base;
-  background-color: @edu-background-color-base;
+  .m-row-card(3);
+}
+
+.RoomCard-title {
+  cursor: pointer;
+  font-weight: bold;
+  font-size: @edu-font-size-base;
+
+  &.RoomCard-title--nonClickable {
+    cursor: not-allowed;
+    color: @edu-text-color-secondary;
+  }
 }
 
 .RoomCard-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
+  height: 70px;
+  cursor: pointer;
+  .m-line-clamp(3);
 
-.RoomCard-header {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.RoomCard-divider {
-  margin: 12px 0;
-}
-
-.RoomCard-name {
-  .m-line-clamp(1);
-  align-self: center;
-  text-align: center;
-
-  &.RoomCard-name--doubleLine {
-    .m-line-clamp(2);
+  &.RoomCard-content--nonClickable {
+    cursor: not-allowed;
+    color: @edu-text-color-secondary;
   }
+}
+
+.RoomCard-infoTooltip {
+  display: grid;
+  grid-auto-flow: row;
+}
+
+.RoomCard-title {
+  .m-overflow-ellipsis;
+  text-align: center;
+  font-weight: bold;
+}
+
+.RoomCard-details {
+  font-size: @edu-font-size-sm;
 }
 
 .RoomCard-owner {
@@ -45,26 +49,16 @@
   color: @edu-text-color-secondary;
 }
 
-.RoomCard-divider {
-  margin: 0 !important;
-}
-
 .RoomCard-infoRow {
   display: flex;
   gap: 10px;
-  font-size: @edu-font-size-sm;
   padding-bottom: 5px;
-  color: lighten(@edu-text-color, 10%);
-
-  &:last-of-type {
-    padding-bottom: 0;
-  }
 }
 
 .RoomCard-infoLabel {
   flex: 0 0 70px;
 }
 
-.RoomCard-button {
-  margin-top: auto;
-}
+// .RoomCard-description {
+//   .m-clamp-lines(3);
+// }
