--- a/src/components/user-card.less
+++ b/src/components/user-card.less
@@ -9,9 +9,10 @@
   align-items: center;
   grid-template-rows: auto auto 1fr;
   overflow: hidden;
+  cursor: pointer;
 
-  &.UserCard-content--clickable {
-    cursor: pointer;
+  &.UserCard-content--nonClickable {
+    cursor: default;
   }
 }
 
