EDU-1262 Add icons to tabs

--- a/src/styles/tabs.less
+++ b/src/styles/tabs.less
@@ -8,6 +8,12 @@
   &.Tabs--noPadding {
     padding-top: 0 !important;
   }
+
+  &.Tabs--withIcons {
+    .anticon {
+      margin-right: 8px !important;
+    }
+  }
 }
 
 .Tabs-tabPane {
