EDU-1262 Rework document-card component

--- a/src/components/profile-header.less
+++ b/src/components/profile-header.less
@@ -30,6 +30,7 @@
 
 .ProfileHeader-organization {
   display: block;
+  max-width: 200px;
   font-size: @edu-font-size-sm;
   color: @edu-text-color-secondary;
 }
