--- a/src/components/homepage/homepage-document-cards.less
+++ b/src/components/homepage/homepage-document-cards.less
@@ -10,49 +10,9 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-}
 
-.HomepageDocumentCards-card {
-  width: 300px;
-  margin: 15px;
-}
-
-.HomepageDocumentCards-cardTitle {
-  font-size: @edu-font-size-base;
-  font-weight: bold;
-  .m-overflow-ellipsis;
-}
-
-.HomepageDocumentCards-cardContent {
-  height: 100px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  font-size: @edu-font-size-sm;
-}
-
-.HomepageDocumentCards-cardContentDescription {
-  .m-line-clamp(3);
-}
-
-.HomepageDocumentCards-cardContentDate {
-  color: @edu-text-color-secondary;
-}
-
-.HomepageDocumentCards-cardFavoriteAction {
-  display: flex;
-  justify-content: center;
-}
-
-.HomepageDocumentCards-cardUserAction {
-  &:hover {
-    cursor: default;
-    color: @edu-text-color;
+  .DocumentCard {
+    .m-row-card(3) !important;
+    margin: @edu-content-padding;
   }
-
-  font-size: 1.2em;
-}
-
-.HomepageDocumentCards-cardNavigateAction {
-  font-size: 1.4em;
 }
