--- a/src/components/user-card.less
+++ b/src/components/user-card.less
@@ -22,7 +22,8 @@
   cursor: pointer;
 
   &.UserCard-content--nonClickable {
-    cursor: default;
+    cursor: not-allowed;
+    color: @edu-text-color-secondary;
   }
 }
 
@@ -30,27 +31,9 @@
   text-align: center;
   font-size: @edu-font-size-sm;
   .m-line-clamp(3);
-
-  &.UserCard-details--roomInvitation {
-    display: flex;
-    margin: 0 auto;
-    width: fit-content;
-    flex-direction: column;
-    justify-content: center;
-  }
 }
 
-.UserCard-roomInvitationDetail {
-  align-self: flex-end;
-}
-
-
-.UserCard-roomInvitationEmail {
-  .m-overflow-ellipsis;
-  color: @edu-text-color-secondary;
-}
-
-.UserCard-roomInvitationEmailLink {
-  .m-link(inherit);
-  margin-left: 5px;
+.RoomCard-infoTooltip {
+  display: grid;
+  grid-auto-flow: row;
 }
