--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -427,3 +427,10 @@
   line-height: 160%;
   text-align: center;
 }
+
+.m-deleted-data {
+  cursor: default;
+  font-style: italic;
+  pointer-events: none;
+  color: @edu-text-color-secondary;
+}
