--- a/src/components/dashboard/notifications-tab.less
+++ b/src/components/dashboard/notifications-tab.less
@@ -50,9 +50,8 @@
   padding-right: @edu-content-padding;
 }
 
-.NotificationsTab-notificationTitle {
-  font-style: italic;
-
+.NotificationsTab-notificationMissingDataTitle {
+  .m-deleted-data;
 }
 
 .NotificationsTab-notificationLink {
