--- a/src/components/room-card.less
+++ b/src/components/room-card.less
@@ -9,9 +9,13 @@
   text-align: left;
   font-size: @edu-font-size-base;
 
-  &.RoomCard-title--nonClickable {
-    cursor: not-allowed;
+  &.RoomCard-title--disabledNavigation {
+    cursor: default;
     color: @edu-text-color-secondary;
+  }
+
+  &.RoomCard-title--deletedRoom {
+    .m-deleted-data;
   }
 }
 
@@ -20,9 +24,13 @@
   cursor: pointer;
   .m-line-clamp(3);
 
-  &.RoomCard-content--nonClickable {
-    cursor: not-allowed;
+  &.RoomCard-content--disabledNavigation {
+    cursor: default;
     color: @edu-text-color-secondary;
+  }
+
+  &.RoomCard-content--deletedRoom {
+    .m-deleted-data;
   }
 }
 
