EDU-1262 Streamline unavailable data even more

--- a/src/components/dashboard/notifications-tab.less
+++ b/src/components/dashboard/notifications-tab.less
@@ -51,7 +51,7 @@
 }
 
 .NotificationsTab-notificationMissingDataTitle {
-  .m-deleted-data;
+  .m-data-unavailable;
 }
 
 .NotificationsTab-notificationLink {
