--- a/src/components/pages/user-profile.less
+++ b/src/components/pages/user-profile.less
@@ -22,6 +22,7 @@
   font-weight: bold;
   display: flex;
   justify-content: center;
+  .m-data-unavailable;
 }
 
 .UserProfilePage-sectionHeadline {
