--- a/src/components/room-card.less
+++ b/src/components/room-card.less
@@ -15,7 +15,7 @@
   }
 
   &.RoomCard-title--deletedRoom {
-    .m-deleted-data;
+    .m-data-unavailable;
   }
 }
 
@@ -30,7 +30,7 @@
   }
 
   &.RoomCard-content--deletedRoom {
-    .m-deleted-data;
+    .m-data-unavailable;
   }
 }
 
