--- a/src/components/user-card.less
+++ b/src/components/user-card.less
@@ -31,9 +31,10 @@
   font-size: @edu-font-size-sm;
   .m-line-clamp(3);
 
-  &.UserCard-details--closedAccount {
-    .m-deleted-data;
-  }
+}
+
+.UserCard-detailsClosedAccount {
+  .m-data-unavailable;
 }
 
 .RoomCard-infoTooltip {
