--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -428,7 +428,7 @@
   text-align: center;
 }
 
-.m-deleted-data {
+.m-data-unavailable {
   cursor: default;
   font-style: italic;
   pointer-events: none;
