--- a/src/components/document-card.less
+++ b/src/components/document-card.less
@@ -10,7 +10,7 @@
   font-size: @edu-font-size-base;
 
   &.DocumentCard-title--deletedDocument {
-    .m-deleted-data;
+    .m-data-unavailable;
   }
 }
 
@@ -20,7 +20,7 @@
   .m-line-clamp(3);
 
   &.DocumentCard-content--deletedDocument {
-    .m-deleted-data;
+    .m-data-unavailable;
   }
 }
 
