EDU-1262 Reduce padding and align content in cards and card titles

--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -259,6 +259,10 @@
 }
 
 .m-row-card(@countPerRow) {
+  .ant-card-head {
+    padding: 0 @edu-content-padding !important;
+  }
+
   .ant-card-body {
     padding: @edu-content-padding !important;
   }
