EDU-1262 Distinguish between types of card actions and phrase tooltip parts as sentences

--- a/src/components/document-card.less
+++ b/src/components/document-card.less
@@ -24,6 +24,10 @@
   }
 }
 
+.DocumentCard-helpAction {
+  cursor: help;
+}
+
 .DocumentCard-infoTooltip {
   display: grid;
   grid-auto-flow: row;
