--- a/src/components/user-card.less
+++ b/src/components/user-card.less
@@ -37,7 +37,11 @@
   .m-data-unavailable;
 }
 
-.RoomCard-infoTooltip {
+.UserCard-helpAction {
+  cursor: help;
+}
+
+.UserCard-infoTooltip {
   display: grid;
   grid-auto-flow: row;
 }
