--- a/src/components/room-card.less
+++ b/src/components/room-card.less
@@ -9,13 +9,13 @@
   text-align: left;
   font-size: @edu-font-size-base;
 
+  &.RoomCard-title--deletedRoom {
+    .m-data-unavailable;
+  }
+
   &.RoomCard-title--disabledNavigation {
     cursor: default;
     color: @edu-text-color-secondary;
-  }
-
-  &.RoomCard-title--deletedRoom {
-    .m-data-unavailable;
   }
 }
 
@@ -24,14 +24,18 @@
   cursor: pointer;
   .m-line-clamp(3);
 
+  &.RoomCard-content--deletedRoom {
+    .m-data-unavailable;
+  }
+
   &.RoomCard-content--disabledNavigation {
     cursor: default;
     color: @edu-text-color-secondary;
   }
+}
 
-  &.RoomCard-content--deletedRoom {
-    .m-data-unavailable;
-  }
+.RoomCard-helpAction {
+  cursor: help;
 }
 
 .RoomCard-infoTooltip {
