EDU-1262 Word of the day: streamline

--- a/src/components/user-card.less
+++ b/src/components/user-card.less
@@ -22,7 +22,7 @@
   cursor: pointer;
 
   &.UserCard-content--noAccount {
-    color: @edu-text-color-secondary;
+    cursor: default;
   }
 }
 
@@ -33,7 +33,7 @@
 
 }
 
-.UserCard-detailsClosedAccount {
+.UserCard-detailsMissingData {
   .m-data-unavailable;
 }
 
