EDU-1266 Lock user log in back door

--- a/src/components/login-form.less
+++ b/src/components/login-form.less
@@ -7,6 +7,7 @@
 
 .LoginForm-alternativeActionLink {
   text-align: right;
+  font-size: @edu-font-size-sm;
   margin-top: @edu-content-padding;
 }
 
