--- a/src/components/pages/reset-password.less
+++ b/src/components/pages/reset-password.less
@@ -9,3 +9,20 @@
 .ResetPasswordPage-form {
   .m-narrow-fullscreen-page-content;
 }
+
+.ResetPasswordPage-disclaimer {
+  margin-top: 25px;
+  display: flex;
+  align-items: baseline;
+}
+
+.ResetPasswordPage-disclaimerText {
+  text-align: center;
+  font-size: @edu-font-size-sm;
+  font-style: italic;
+}
+
+.ResetPasswordPage-disclaimerIcon {
+  color: @edu-warning-color;
+  font-size: @edu-font-size-base;
+}
