--- a/src/components/user-steps-form.less
+++ b/src/components/user-steps-form.less
@@ -4,6 +4,11 @@
   }
 }
 
+.UserStepsForm-title {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
 .UserStepsForm-steps {
   margin-bottom: 50px;
 }
@@ -20,7 +25,10 @@
   .m-user-form-submit-button;
 }
 
+.UserStepsForm-verificationMessageWrapper {
+  margin-bottom: 50px;
+}
+
 .UserStepsForm-verificationMessage {
   text-align: center;
-  margin-bottom: 50px;
 }
